# mcas

src/python/python-personality/: CMakeLists.txt  README.md
src/python/python-personality/fomp/: FAST_OMP.csv  FAST_OMP_10rounds.csv  FAST_OMP_25rounds.csv  SDS_MA.csv  SDS_OMP.csv  Top_k.csv  algos.py  demo.py  models.py
src/python/python-personality/fomp_MCAS/: algos.py  demo.py
src/python/python-personality/fomp_cstrnt/: FAST_OMP.csv  SDS_OMP.csv  Top_k.csv  algos.py  demo.py  models.py
src/python/python-personality/omp/: CMakeLists.txt  README.md  __init__.py  algos.py  demo.py  models.py  setup.py.in
src/python/python-personality/omp/tests/: demo.py  short_data.csv
src/python/python-personality/pymcas/: api.py
